# NSU_OOP

4 sem/Merging files/src/: main.cpp
4 sem/Merging files/tests/: CMakeLists.txt  test_file_reader.cpp
4 sem/darray/: CMakeLists.txt
5. histogram/: CMakeLists.txt  in.txt  out.txt
5. histogram/src/: CMakeLists.txt  Exporter.cpp  Exporter.h  Histogram.cpp  Histogram.hpp  Parser.cpp  Parser.h  main.cpp
5. histogram/tests/: test.cpp
Fabriq/: CMakeLists.txt  Fabriq.c  Fabriq.h  main.c  test.txt
Fabriq/Entities/: Point.c  Point.h  Shape.c  Shape.h  circle.c  circle.h  line.c  line.h  new.c  new.h  rectangle.c  rectangle.h
Fabriq/utils/: darray.c
Matrix/: CMakeCache.txt  CMakeLists.txt
Matrix/src/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  main.cpp
Matrix/tests/: Matrix_test.cpp
Merging files/: .gitignore  CMakeLists.txt  in2.txt  out
Merging files/src/: StreamMerger.cpp  StreamMerger.h
Merging files/tests/: CMakeLists.txt  test_file_reader.cpp
darray/: CMakeLists.txt  darray.c  darray.h  main.c
